cambio de mapperstruct por mapper manual